# termpair

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Containerfile  Dockerfile  LICENSE  MANIFEST.in  README.md  index.html  install.sh  makefile  mkdocs.yml  mypy.ini  noxfile.py  package.json  requirements.in  requirements.txt  setup.py  sitemap.xml  termpair_architecture.excalidraw
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: build_executable.yml  ci.yml  release.yml  tests.yml
CHANGELOG/: index.html
changelog/: index.html
connect/: asset-manifest.json  index.html  precache-manifest.634ed83aba9a45637903b59c90cb7eec.js  precache-manifest.6392510087a598d29b29a70a0a66a0a6.js  service-worker.js
connect/static/css/: 2.19f2448e.chunk.css.map  2.946442e2.chunk.css  2.946442e2.chunk.css.map  2.cc97c266.chunk.css  2.cc97c266.chunk.css.map  main.083ee4ca.chunk.css  main.083ee4ca.chunk.css.map  main.2a5f9a4d.chunk.css  main.2a5f9a4d.chunk.css.map  main.540ef106.chunk.css  main.540ef106.chunk.css.map  main.9fad0d32.chunk.css  main.9fad0d32.chunk.css.map  main.c2fcb723.chunk.css  main.c2fcb723.chunk.css.map  main.c9e46690.chunk.css  main.c9e46690.chunk.css.map
connect/static/js/: 2.18d5e567.chunk.js  2.18d5e567.chunk.js.LICENSE.txt  2.18d5e567.chunk.js.map  2.3de39255.chunk.js  2.3de39255.chunk.js.map  2.5b077821.chunk.js.map  2.7cc8a944.chunk.js  2.7cc8a944.chunk.js.map  2.8b04fdbd.chunk.js  2.8b04fdbd.chunk.js.map  2.96bee9bc.chunk.js  2.96bee9bc.chunk.js.map  main.037f56e9.chunk.js  main.037f56e9.chunk.js.map  main.1452c223.chunk.js  main.1452c223.chunk.js.map  main.2b88a240.chunk.js  main.2b88a240.chunk.js.map  main.2de8a78e.chunk.js  main.2de8a78e.chunk.js.map  main.45bb3514.chunk.js  main.45bb3514.chunk.js.map  main.8aee9605.chunk.js  main.8aee9605.chunk.js.map  main.c26f80ac.chunk.js  main.c26f80ac.chunk.js.map  main.c2e87ad7.chunk.js  main.c2e87ad7.chunk.js.map  main.d9b0979b.chunk.js  main.d9b0979b.chunk.js.map  main.ffa9e51f.chunk.js  main.ffa9e51f.chunk.js.map  runtime-main.546cc18f.js  runtime-main.546cc18f.js.map
contributing/: index.html
docs/: README.md  contributing.md  index.md  package.json  termpair_architecture.excalidraw
docs/.vuepress/: config.js
search/: search_index.json
site/changelog/: index.html
site/connect/frontend_build/: asset-manifest.json
site/connect/frontend_build/static/js/: 2.5b077821.chunk.js  main.34fc137e.chunk.js  main.34fc137e.chunk.js.map
site/connect/static/css/: 2.19f2448e.chunk.css  main.9fbae2cc.chunk.css  main.9fbae2cc.chunk.css.map
site/contributing/: index.html
site/search/: search_index.json
termpair/: Terminal.py  constants.py  encryption.py  main.py  server.py  server_websocket_subprotocol_handlers.py  share.py  utils.py
termpair-rs/: Cargo.toml
termpair-rs/crates/termpair/: Cargo.toml
termpair-rs/crates/termpair-common/: Cargo.toml
termpair-rs/crates/termpair-common/src/: constants.rs  encryption.rs  lib.rs
termpair-rs/crates/termpair-server/: Cargo.toml
termpair-rs/crates/termpair-server/src/: lib.rs  main.rs  names.rs
termpair-rs/crates/termpair-server/src/server/: handlers.rs  mod.rs  signing.rs  terminal.rs  themes.rs
termpair-rs/crates/termpair/src/: main.rs
termpair-rs/crates/termpair/src/share/: aes_keys.rs  mod.rs  session.rs
termpair-rs/frontend/static/: app.js  index.html  style.css  xterm.min.css  xterm.min.js
termpair-rs/src/: constants.rs  encryption.rs  main.rs  names.rs  types.rs
termpair-rs/src/server/: handlers.rs  mod.rs  signing.rs  terminal.rs
termpair-rs/src/share/: aes_keys.rs  mod.rs  session.rs  skill.rs
termpair/frontend_build/: index.html
termpair/frontend_build/static/css/: main.6d80e0d4.chunk.css  main.6d80e0d4.chunk.css.map
termpair/frontend_build/static/js/: 2.c31ec014.chunk.js  2.c31ec014.chunk.js.map  main.418b1700.chunk.js  main.418b1700.chunk.js.map
termpair/frontend_src/: package.json  tailwind.config.js
termpair/frontend_src/public/: index.html
termpair/frontend_src/src/: App.css  App.js  App.tsx  BottomBar.tsx  CopyCommand.tsx  ErrorBoundary.tsx  LandingPageContent.tsx  TopBar.tsx  constants.ts  constants.tsx  encryption.js  encryption.tsx  events.tsx  index.css  index.js  index.tsx  serviceWorker.ts  types.tsx  utils.tsx  websocketMessageHandler.tsx  xtermUtils.tsx
termpair/static/css/: termpair.css
tests/: test_e2e.py  test_project.py  test_server.py
